Added an available flights page and made the searching of flights dynamic

--- a/airline_frontend/index.html
+++ b/airline_frontend/index.html
@@ -12,6 +12,7 @@
         <div class="container">
             <h1>✈️ Nimbus Airlines</h1>
             <ul class="nav-links" id="navLinks">
+                <li><a href="available-flights.html">Available Flights</a></li>
                 <li><a href="search.html">Search Flights</a></li>
                 <li><a href="my-bookings.html">My Bookings</a></li>
                 <li><a href="login.html" id="loginBtn">Login</a></li>
