--- a/airline_frontend/profile.html
+++ b/airline_frontend/profile.html
@@ -71,7 +71,7 @@
             <div id="message"></div>
         </div>
     </div>
-
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
     <script>
         // ✅ FIX 1: ENFORCE AUTHENTICATION
