--- a/airline_frontend/admin.html
+++ b/airline_frontend/admin.html
@@ -139,7 +139,7 @@
             </div>
         </div>
     </div>
-
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
     <script>
         // ✅ FIXED: Check for active user session on page load
@@ -208,7 +208,7 @@
             const password = document.getElementById('adminPassword').value;
 
             try {
-                const response = await fetch('http://localhost:8080/api/admin/login', {
+                const response = await fetch(CONFIG.API_BASE_URL + '/api/admin/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, password })
@@ -238,8 +238,8 @@
         // Dashboard Summary
         async function loadDashboardSummary(){
             try{
-                const flights = await (await fetch('http://localhost:8080/api/flights')).json();
-                const bookings = await (await fetch('http://localhost:8080/api/bookings')).json();
+                const flights = await (await fetch(CONFIG.API_BASE_URL + '/api/flights')).json();
+                const bookings = await (await fetch(CONFIG.API_BASE_URL + '/api/bookings')).json();
                 const totalRevenue = bookings.reduce((sum,b)=>sum+b.totalAmount,0);
 
                 document.getElementById('totalFlights').innerText = flights.length;
@@ -253,7 +253,7 @@
         // Load Flights Table
         async function loadFlights(){
             try{
-                const flights = await (await fetch('http://localhost:8080/api/flights')).json();
+                const flights = await (await fetch(CONFIG.API_BASE_URL + '/api/flights')).json();
                 document.getElementById('flightsList').innerHTML = `
                     <table class="admin-table">
                         <thead>
@@ -288,7 +288,7 @@
         // Load Bookings Table
         async function loadBookings(){
             try{
-                const bookings = await (await fetch('http://localhost:8080/api/bookings')).json();
+                const bookings = await (await fetch(CONFIG.API_BASE_URL + '/api/bookings')).json();
                 document.getElementById('bookingsList').innerHTML = `
                     <table class="admin-table">
                         <thead>
@@ -317,7 +317,7 @@
         // Load Passengers Table
         async function loadPassengers(){
             try{
-                const passengers = await (await fetch('http://localhost:8080/api/passengers')).json();
+                const passengers = await (await fetch(CONFIG.API_BASE_URL + '/api/passengers')).json();
                 document.getElementById('passengersList').innerHTML = `
                     <table class="admin-table">
                         <thead>
@@ -360,13 +360,13 @@
             try {
                 let response;
                 if (editingFlightId) {
-                    response = await fetch(`http://localhost:8080/api/flights/${editingFlightId}`, {
+                    response = await fetch(`${CONFIG.API_BASE_URL}/api/flights/${editingFlightId}`, {
                         method: 'PUT',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(flightData)
                     });
                 } else {
-                    response = await fetch('http://localhost:8080/api/flights', {
+                    response = await fetch(CONFIG.API_BASE_URL + '/api/flights', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(flightData)
@@ -396,7 +396,7 @@
             if (!confirm('Are you sure you want to delete this flight?')) return;
 
             try {
-                const response = await fetch(`http://localhost:8080/api/flights/${id}`, {
+                const response = await fetch(`${CONFIG.API_BASE_URL}/api/flights/${id}`, {
                     method: 'DELETE'
                 });
 
@@ -415,7 +415,7 @@
         }
 
         async function editFlight(id){
-            const flights = await (await fetch('http://localhost:8080/api/flights')).json();
+            const flights = await (await fetch(CONFIG.API_BASE_URL + '/api/flights')).json();
             const flight = flights.find(f => f.id === id);
             if(!flight) return alert('Flight not found');
 
