--- a/airline_frontend/index.html
+++ b/airline_frontend/index.html
@@ -91,8 +91,9 @@
     <footer>
         <p>&copy; 2025 Nimbus Airlines. All rights reserved.</p>
     </footer>
-
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
+    
     <script>
         // ✅ FIXED: Persistent session management
         function updateNavbar() {
