--- a/airline_frontend/login.html
+++ b/airline_frontend/login.html
@@ -42,7 +42,7 @@
             <div id="message"></div>
         </div>
     </div>
-
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
     <script>
         // ✅ FIXED: Check for active admin session
@@ -74,7 +74,7 @@
             }
             
             try {
-                const response = await fetch('http://localhost:8080/api/passengers/login', {
+                const response = await fetch(CONFIG.API_BASE_URL + '/api/passengers/login', {
                     method: 'POST',
                     headers: { 
                         'Content-Type': 'application/json',
