--- a/airline_frontend/signup.html
+++ b/airline_frontend/signup.html
@@ -70,7 +70,7 @@
             <div id="message"></div>
         </div>
     </div>
-
+    <script src="js/config.js"></script>
     <script>
         // Display message function
         function showMessage(message, type) {
@@ -133,7 +133,7 @@
             console.log('Attempting signup with:', passenger);
             
             try {
-                const response = await fetch('http://localhost:8080/api/passengers/signup', {
+                   const response = await fetch(CONFIG.API_BASE_URL + '/api/passengers/signup', {    
                     method: 'POST',
                     headers: { 
                         'Content-Type': 'application/json',
