updated the ticket

--- a/airline_frontend/ticket.html
+++ b/airline_frontend/ticket.html
@@ -593,7 +593,7 @@
                                     <p class="location-date">${new Date(flight.departureDate).toLocaleDateString('en-IN', {day: '2-digit', month: 'short', year: 'numeric'})}</p>
                                 </div>
                                 <div class="route-middle">
-                                    <p class="route-line">━━━━━✈️━━━━━</p>
+                                    <p class="route-line">✈️</p>
                                     <p class="flight-number-display">${flight.flightNumber}</p>
                                     <p class="airline-name">${flight.airline}</p>
                                     <p class="seat-number-display">Seat: ${seatInfo.flight1 || 'N/A'}</p>
