last update for ticket

--- a/airline_frontend/available-flights.html
+++ b/airline_frontend/available-flights.html
@@ -467,7 +467,7 @@
     <div class="container">
         <div class="page-header">
             <h2>✈️ Available Flights</h2>
-            <p>Browse all upcoming flights and book your journey</p>
+            <p style="color: white;">Browse all upcoming flights and book your journey</p>
         </div>
 
         <div class="filter-bar">
