--- a/airline_frontend/signup.html
+++ b/airline_frontend/signup.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h1>✈️ SkyWings Airlines</h1>
+            <h1>✈️ Nimbus Airlines</h1>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
